feat: adding handler and route for ai rebalancing
